Added logic to handle case when incoming record doesn't contain specified marc field